<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    tools:context="com.example.prateekpande.patientmanager.fragment.AddAppointment"
    android:id="@+id/constraintLayout">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextPatientName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/name"
        android:textAlignment="viewStart"
        android:textSize="@dimen/text_field"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        android:layout_marginTop="@dimen/field_spacing"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintHorizontal_bias="1.0" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editTextPatientContact"
        android:hint="@string/contact"
        android:textSize="@dimen/text_field"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/editTextPatientName"
        android:layout_marginTop="@dimen/field_spacing"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        tools:layout_constraintRight_creator="1" />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/editTextPatientContact"
        android:layout_marginTop="@dimen/field_spacing"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        tools:layout_constraintRight_creator="1">

        <RadioButton
            android:text="@string/gender1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/gender1"
            android:layout_weight="1"
            android:textSize="@dimen/text_field"
            android:checked="true"
            android:textAlignment="viewStart"
            app:layout_constraintLeft_toLeftOf="@+id/radioGroupGender"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintRight_toLeftOf="@+id/gender2"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintBaseline_toBaselineOf="@+id/gender2"
            tools:layout_constraintBaseline_creator="1" />

        <RadioButton
            android:text="@string/gender2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/gender2"
            android:textSize="@dimen/text_field"
            android:layout_weight="1"
            app:layout_constraintTop_toTopOf="@+id/radioGroupGender"
            tools:layout_constraintTop_creator="1"
            app:layout_constraintRight_toRightOf="@+id/radioGroupGender"
            android:layout_marginEnd="1dp"
            tools:layout_constraintRight_creator="1" />
    </RadioGroup>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextPatientAge"
        android:hint="@string/age"
        android:textSize="@dimen/text_field"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupGender"
        android:layout_marginTop="@dimen/field_spacing"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        tools:layout_constraintRight_creator="1" />

    <Spinner
        android:layout_height="wrap_content"
        android:id="@+id/spinnerClinic"
        android:textSize="@dimen/text_field"
        android:spinnerMode="dialog"
        android:entries="@array/clinicLocations"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        android:layout_marginStart="38dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/editTextPatientAge"
        android:layout_marginTop="@dimen/field_spacing"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        android:layout_marginEnd="38dp"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:text="@string/bookAppointment"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:id="@+id/btnBookAppointment"
        android:textSize="@dimen/text_field"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/backgroudColor"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editTextRegarding"
        android:textSize="@dimen/text_field"
        android:hint="@string/regarding"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime"
        android:layout_marginTop="@dimen/field_spacing"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintHorizontal_bias="0.4" />


    <EditText
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:textIsSelectable="true"
        android:clickable="true"
        android:ems="10"
        android:id="@+id/editTextDate"
        android:textSize="@dimen/text_field"
        android:hint="@string/date"
        android:layout_weight="1"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/spinnerClinic"
        android:layout_marginTop="@dimen/field_spacing" />

    <EditText
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:textIsSelectable="true"
        android:clickable="true"
        android:ems="10"
        android:id="@+id/editTextTime"
        android:hint="@string/time"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/spinnerClinic"
        android:layout_marginTop="@dimen/field_spacing"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout" />

</android.support.constraint.ConstraintLayout>
